# moltbot-acip-sidecar

./: .dockerignore  .env.example  .gitignore  CHANGE_LOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  config.example.toml
.learnings/: ERRORS.md
docs/: PATCHING.md  RELEASE.md  TODO.md  WORKFLOW.md  acipctl.md  api.md  docker.md  install-modes.md  install-user.md  install.md  secrets.md  troubleshooting.md
packaging/: acip-sidecar.service  acip-sidecar.user.service
scripts/: acip-sidecar-dev-env.sh  check.sh  install  install-user.sh  install.sh
src/: app.rs  app_state_builder.rs  config.rs  extract.rs  html_scan.rs  ingest.rs  lib.rs  main.rs  model_policy.rs  normalize.rs  policy_store.rs  reputation.rs  routes.rs  sentry.rs  server_config.rs  state.rs  threat.rs  token_auth.rs
tests/: app_state_builder_tests.rs  config_parse_tests.rs  extractor_failure_modes_tests.rs  html_scan_tests.rs  ingest_adversarial_tightening_tests.rs  ingest_integration_attack_suite.rs  ingest_integration_fixture_files.rs  introspection_policy_tests.rs  main_bin_smoke_tests.rs  policy_selection_ingest_tests.rs  reputation_file_store_tests.rs  reputation_policy_tests.rs  seccomp_network_deny_tests.rs  secrets_and_truncation_tests.rs  sentry_enforcement_tests.rs  server_config_more_tests.rs  server_config_tests.rs  startup_policy_store_tests.rs  startup_tests.rs  status_endpoint_tests.rs  threat_assess_tests.rs  token_auth_tests.rs  xml_scan_tests.rs
tests/util/: bin.rs
