[package]
name = "moltbot-acip-sidecar"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
jsonschema = "0.17"
time = { version = "0.3", features = ["macros", "formatting"] }
dotenvy = "0.15"

[dev-dependencies]
tempfile = "3"
tower = "0.5"
http-body-util = "0.1"

# SQLite storage (optional for v0.1; can be enabled later)
# sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "macros"] }
